add body to req
