# docs/swagger.json
@@ -25,6 +25,17 @@
                 ],
                 "summary": "Try to accept a block proof assignment",
                 "operationId": "create-assignment",
+                "parameters": [
+                    {
+                        "description": "assignment request body",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/prover_server.CreateAssignmentRequestBody"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -63,6 +74,43 @@
         }
     },
     "definitions": {
+        "big.Int": {
+            "type": "object"
+        },
+        "github_com_taikoxyz_taiko-client_bindings_encoding.TierFee": {
+            "type": "object",
+            "properties": {
+                "fee": {
+                    "$ref": "#/definitions/big.Int"
+                },
+                "tier": {
+                    "type": "integer"
+                }
+            }
+        },
+        "prover_server.CreateAssignmentRequestBody": {
+            "type": "object",
+            "properties": {
+                "expiry": {
+                    "type": "integer"
+                },
+                "feeToken": {
+                    "type": "string"
+                },
+                "tierFees": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/github_com_taikoxyz_taiko-client_bindings_encoding.TierFee"
+                    }
+                },
+                "txListHash": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                }
+            }
+        },
         "prover_server.ProposeBlockResponse": {
             "type": "object",
             "properties": {
